styling strt home

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Web-Portfolio</title>
 
 <!--    css files-->
     <link rel="stylesheet" href="css/style.css">
@@ -24,7 +24,7 @@
 
         <div class="nav-toggler">
             <span></span>
-<!--            27:46-->
+
         </div>
 
         <ul class="nav">
@@ -39,7 +39,21 @@
 <!--    main-content start-->
     <div class="main-content">
         <section class="home-section">
-            Home
+            <div class="container">
+                <div class="row">
+                    <div class="home-info padd-15">
+                        <h3 class="hello">Nice To Meet You! I'm <span class="name">Gimhan</span></h3>
+                        <h3 class="my-proffession"><span class="typing">Web Designer | Graphic designer | UI/UX Designer</span></h3>
+                        <p>I'm a Web designer | UI/UX Designer (Figma ProtoTyping) with 2 year Experience. My experties is to create b& design Graphic arts, web sketches using Figma & web development.</p>
+                        <a href="#contact" class="btn-hire-me">Hire Me</a>
+                    </div>
+
+                    <div class="home-img padd-15">
+                        <img src="./images/299480202_854839852166705_1507037131935011586_n.jpg" alt="image">
+                    </div>
+
+                </div>
+            </div>
         </section>
     </div>
 <!--    main-content end-->
