--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!--    Aside end-->
 <!--    main-content start-->
     <div class="main-content">
-        <section class="home-section">
+        <section class="home-section hidden">
             <div class="container">
                 <div class="row">
                     <div class="home-info padd-15">
@@ -55,6 +55,19 @@
                 </div>
             </div>
         </section>
+
+        <!--    about-content start-->
+        <section class="about section">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title">
+                        <h2>About Me</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--    about-content end-->
+
     </div>
 <!--    main-content end-->
 </div>
